Attempt to fix right side team logo alignment

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -202,7 +202,7 @@ display: none;
 
 .match_column_2 {
   float: left;
-  width: 150px; 
+  width: 130px; 
   height: 100px;
   text-align: center;
   vertical-align: middle;
